# burn-as-a-general-optimiser

./: .gitignore  Cargo.toml  README.md
src/: data.rs  lib.rs  main.rs  model.rs  training.rs
